Fixed collapse order on tablet layout
Also added some browser prefixing

--- a/css/front.less
+++ b/css/front.less
@@ -5,8 +5,10 @@
 	&.panel-no-style,
 	&.panel-has-style > .panel-row-style{
 		display: -webkit-flex;
-		-webkit-flex-wrap: wrap;
 		display: flex;
+
+		-ms-flex-wrap: wrap;
+		-webkit-flex-wrap: wrap;
 		flex-wrap: nowrap;
 	}
 }
